--- a/.travis.yml
+++ b/.travis.yml
@@ -47,6 +47,6 @@ script:
   - moodle-plugin-ci validate
   - moodle-plugin-ci savepoints
   - moodle-plugin-ci mustache
-  - moodle-plugin-ci grunt
+  - moodle-plugin-ci grunt -t eslint:amd -t uglify:amd
   - moodle-plugin-ci phpunit
   - moodle-plugin-ci behat
