--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "local_starred_courses",
   "devDependencies": {
     "grunt": "^1.0.1",
+    "grunt-contrib-less": "^1.4.1",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-fixindent": "^0.1.3",
     "grunt-load-gruntfile": "0.0.2"
